# nomotic

./: LICENSE  README.md  pyproject.toml
docs/: architecture.md  configuration.md  dimensions.md
examples/: governed_api.py  hello_nomo.py  multi_agent.py
schemas/: context-profile.v0.1.0.schema.json  governance-response.v0.1.0.schema.json  governance-token.v0.1.0.schema.json  reasoning-artifact.v0.1.0.schema.json
src/nomotic/: __init__.py  accountability.py  api.py  audit.py  audit_store.py  authority.py  bias.py  certificate.py  cli.py  context.py  context_profile.py  contextual_modifier.py  cross_dimensional.py  dimensions.py  drift.py  equity.py  evaluator.py  executor.py  fingerprint.py  headers.py  human_drift.py  id_registry.py  interrupt.py  keys.py  middleware.py  monitor.py  observer.py  priors.py  protocol.py  provenance.py  registry.py  revocation.py  runtime.py  sandbox.py  scenarios.py  sdk.py  store.py  tiers.py  token.py  trajectory.py  (+5 more)
src/nomotic/adapters/: __init__.py  fastapi_adapter.py  flask_adapter.py
src/nomotic/integrations/: tool_adapter.py
tests/: test_accountability.py  test_adapters.py  test_api.py  test_audit.py  test_audit_api.py  test_audit_integration.py  test_audit_store.py  test_authority.py  test_bias.py  test_certificate.py  test_certificate_integration.py  test_cli.py  test_context.py  test_context_profile.py  test_contextual_modifier.py  test_cross_dimensional.py  test_dimensions.py  test_drift.py  test_drift_integration.py  test_equity.py  test_ethical_reasoning.py  test_evaluator.py  test_executor.py  test_fingerprint.py  test_fingerprint_integration.py  test_hash_chain.py  test_headers.py  test_hello.py  test_human_drift.py  test_id_registry.py  test_integration_registries.py  test_interrupt.py  test_keys.py  test_middleware.py  test_monitor.py  test_observer.py  test_priors.py  test_protocol.py  test_protocol_api.py  test_provenance.py  (+18 more)
