[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nomotic"
version = "0.1.0"
description = "Runtime governance framework for agentic AI — laws for agents, enforced continuously"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
