[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nomotic"
version = "0.1.0"
description = "Runtime governance framework for agentic AI — laws for agents, enforced continuously"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
