[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nomotic"]

[project]
name = "nomotic"
version = "0.1.0"
description = "Runtime governance framework for agentic AI — laws for agents, enforced continuously"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []
authors = [
    {name = "Chris Hood", email = "nomotic@chrishood.com"},
]
keywords = [
    "ai",
    "governance",
    "agentic",
    "nomotic",
    "trust",
    "authorization",
    "ethics",
    "runtime",
    "security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Security",
    "Typing :: Typed",
]

[project.scripts]
nomotic = "nomotic.cli:main"

[project.urls]
Homepage = "https://github.com/nomoticai/nomotic"
Repository = "https://github.com/nomoticai/nomotic"
Issues = "https://github.com/nomoticai/nomotic/issues"
Documentation = "https://github.com/nomoticai/nomotic/tree/main/docs"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
